sandc/test/fixtures/astRegression/shouldSucceed/productions/useStatement/UseStatements.sand
use foo.bar as explicitAlias;
use shadow foo.bar as explicitAlias;

use foo.bar;
use shadow foo.bar;

use star.*;

pub class UseStatements {
    
}