sandc/test/fixtures/astRegression/shouldFail/productions/useStatement/UseShadowStar.sand
use shadow star.*;

pub class UseShadowStar {
    
}